<resources>
    <string name="app_name">SensoriaCompanion</string>

    <string name="activity_main_welcome_msg">Welcome on Sensoria Companion, please choose one of the following options.</string>
    <string name="activity_main_blood_analysis_menu_button">Blood analysis</string>
    <string name="activity_main_statistics_menu_button">Statistics history</string>
    <string name="activity_main_tutorial_menu_button">Tutorial</string>

    <string name="activity_blood_analysis_start_button">Start analysis</string>
    <string name="activity_blood_analysis_stop_button">Stop analysis</string>
    <string name="activity_blood_analysis_param_txt">Image analysis running at %.1f fps</string>
    <string name="activity_blood_analysis_info_txt">Your heartbeat is currently %.1f beats per minute</string>
    <string name="activity_blood_analysis_no_data_graph_txt">Please start an analysis in order to plot graphs</string>
    <string name="activity_blood_analysis_save_success_toast">Analysis session %s successfully saved !</string>
    <string name="activity_blood_analysis_save_failure_toast">Analysis session aborted</string>
    <string name="activity_statistic_session_info_txt">Analysis Session %s</string>
    <string name="delete_analysis_txtButton">Delete Analysis</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="lbltitle">Sensoria Analytics</string>
    <string name="user_scheme">user_scheme</string>
    <string name="activity_tutorial_titletxt">Sensoria Analytics</string>
    <string name="activity_go_totutorial_analysis_btn">Go to analysis menu</string>
    <string name="activity_tutorial_explanation_text">Once in the analysis menu, make sure to put your finger on you camera as shown in the picture below. Then, click on "Start Analysis" and try not to move your finger for about 20 seconds.</string>
</resources>