<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_main_welcome_msg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/activity_main_welcome_msg"/>

    <Button
        android:id="@+id/activity_main_blood_analysis_menu_button"
        android:text="@string/activity_main_blood_analysis_menu_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/activity_main_statistics_menu_button"
        android:text="@string/activity_main_statistics_menu_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/activity_main_option_3_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/activity_main_tutorial_menu_button" />



</LinearLayout>

